@@ -88,8 +88,6 @@ private:
 
 	/** Output buffer, for storing data that's waiting to be transmitted */
 	BufferList outBuf;
-	/** Input buffer */
-	BufferPtr readBuf;
 
 	/** Overflow timer, the time when the socket started to overflow */
 	time_t overflow;
